@@ -13,6 +13,10 @@ CHANGES IN FLTK 1.3.3
 	- Fixed various Mac specific opengl issues (STR #2944)
         - Added new method Fl_Widget::top_window() (STR #2948)
         - Added new method Fl_Widget::top_window_offset() (part of STR #2944)
+	- Added ability to get notifications whenever the clipboard changes (STR#2636)
+	  New methods:
+	      Fl::add_clipboard_notify(Fl_Clipboard_Notify_Handler h, void *data = 0)
+	      Fl::remove_clipboard_notify(Fl_Clipboard_Notify_Handler h)
 
 CHANGES IN FLTK 1.3.2
 
